# aerosuite

./: .gitignore  .gitmodules  AGENTS.md  APPROACH-COMPARISON.md  Cargo.toml  Dockerfile  LICENSE  TODO  aeroftp.openrc  backend-state-check.sh  bacon.toml  control_theory_ideas.md  launch-instance.sh  manual_test_notes.md  packer.pkr.hcl  session-handoff-1.md  session-handoff-2.md  session-handoff-3.md
aerobake/: Dockerfile-dev
aerobake/aeroftp/: _etc_conf.d_aeroftp  _etc_conf.d_aeroftp-routing  _etc_conf.d_aeroslot  _etc_init.d_aeroftp  _etc_init.d_aeroftp-routing  _etc_init.d_aeroslot  _etc_nftables_aeroftp.nft  _etc_sysctl.d_50-aeroftp.conf  _home_aeroftp_scripts_stats.sh  _home_aeroftp_scripts_tc.sh  _home_aeroftp_scripts_track_cpu.sh  _opt_aws_amazon-cloudwatch-agent_etc_amazon-cloudwatch-agent.json  _opt_aws_amazon-cloudwatch-agent_etc_amazon-cloudwatch-agent.toml  _root_.ashrc  aeroftp.pkr.hcl
aerobake/aeroscale/: _etc_conf.d_aeroscale  _etc_conf.d_keepalived  _etc_dhcpcd.conf  _etc_dnsmasq.conf  _etc_dnsmasq.d_aeroscale.conf  _etc_init.d_aeroscale  _etc_init.d_amazon-cloudwatch-agent  _etc_init.d_keepalived  _etc_keepalived_keepalived.conf  _etc_logrotate.d_aeroscale  _etc_logrotate.d_keepalived  _etc_nftables_aeroscaler.nft  _etc_resolv.conf  _etc_sysctl.d_50-aeroscaler.conf  _opt_aws_amazon-cloudwatch-agent_etc_amazon-cloudwatch-agent.json  _opt_aws_amazon-cloudwatch-agent_etc_amazon-cloudwatch-agent.toml  _root_.ashrc  aeroscale.pkr.hcl
aerocoach/: Cargo.toml  Dockerfile
aerocoach/plans/: 01_test_plan_single_slow.json  02_test_plan_parallel_slow.json  03_test_plan_parallel_slow_overlap.json  04_test_plan_parallel_slow_overrun.json  05_test_plan_parallel_unlimited.json  06_test_plan_sequential_fast.json  07_test_plan_sequential_veryfast.json  08_test_plan_simple_large.json  09_test_plan_simple_small.json  10_test_plan_simple buckets.json  11_test_plan_classic_rise_300m.json  12_test_plan_classic_rise_5m.json  13_test_plan_classic_rise_4g.json  14_test_plan_2xclassic_rise_10g.json  15_test_plan_slow_ramp_4g.json  16_test_plan_fast_ramp_4g.json  17_test_plan_high_ramp_4g.json  18_test_plan_redistribution_5m.json
aerocoach/scripts/: 01_test_plan_single_slow.json  02_test_plan_parallel_slow.json  03_test_plan_parallel_slow_overlap.json  04_test_plan_parallel_slow_overrun.json  05_test_plan_parallel_unlimited.json  06_test_plan_parallel_fast.json  10_test_plan_simple.json  11_test_plan_classic_rise_100m.json  11_test_plan_classic_rise_2g.json  12_test_plan_classic_rise_100m.json  12_test_plan_classic_rise_2g.json  run.sh  shell.sh  start_task.sh  test_plan.json  test_plan_parallel_fast.json  test_plan_parallel_slow.json  test_plan_parallel_slow_overlap.json  test_plan_parallel_slow_overrun.json  test_plan_simple.json  test_plan_single_slow.json  test_plan_unlimited.json
aerocoach/src/: config.rs  main.rs  ndjson_writer.rs
aerocoach/src/grpc/: agent_service.rs  mod.rs
aerocoach/src/model/: clock.rs  distributor.rs  load_plan.rs  mod.rs
aerocoach/src/state/: delta.rs  metrics_store.rs  mod.rs  registry.rs
aerocoach/src/ws/: broadcaster.rs  mod.rs
aerocore/: Cargo.toml
aerocore/src/: lib.rs  slot_network.rs
aerocore/src/asg/: mod.rs
aerocore/src/aws/: mod.rs
aerocore/src/redis_pool/: mod.rs
aeroftp/: AGENTS.md  Cargo.toml  Dockerfile-dev
aeroftp/design_ideas/: Notes.md  keepalived-example.conf
aeroftp/examples/: ecs_upload.rs
aeroftp/scripts/: create_authfile.sh  launch-instance.sh  shell.sh  showfiles.sh  track_conn.sh
aeroftp/src/ftp/: server.rs
aeroftp/src/http/: server.rs
aeroftp/src/metrics/: prometheus.rs
aeroftp/src/signal/: mod.rs
aerogym/: ARCHITECTURE_PLAN.md  ARCHITECTURE_PLAN_V2.md  Cargo.toml  Dockerfile  newplan.md
aerogym/scripts/: run.sh  start_task.sh
aerogym/src/: main.rs
aerogym/src/agent/: config.rs  file_manager.rs  load_plan.rs  metrics.rs  mod.rs  rate_limit.rs  registration.rs  session.rs  transfer.rs
aeroplug/: Cargo.toml
aeroplug/src/: assign_ip.rs  attach.rs  main.rs  manage.rs
aeroproto/: Cargo.toml  build.rs
aeroproto/proto/: aeromonitor.proto
aeroproto/src/: lib.rs
aeropulse/: Cargo.toml
aeropulse/src/: main.rs
aeroscale/: Cargo.toml  DESIGN.md
aeroscale/openrc/: slotmanager
aeroscale/src/: lib.rs  listener.rs  scaler.rs  slot_network.rs  vrrp.rs  weight_sync.rs
aeroscale/src/cleanup/: mod.rs
aeroscale/src/metrics/: cloudwatch.rs  exposition.rs  mod.rs  scrape.rs  server.rs
aeroscale/src/snapshot/: asg.rs  ipvs.rs  leases.rs  mod.rs
aeroscrape/scripts/: shell.sh  start_task.sh
aeroscrape/src/: copilot.rs  gemini.rs  main.rs
aeroslot/: Cargo.toml
aeroslot/src/: lua.rs  main.rs
aerotrack/: Dockerfile  README.md  package-lock.json  package.json  server.js  vite.config.ts
aerotrack/scripts/: run.sh
aerotrack/src/: hooks.server.ts
design_ideas/: drain-monitor.sh  install-backend-manager.sh  keepalived.conf.example  manage-backend-simple.sh  manage-backend.sh
design_ideas/weight-changing-version/: Notes.md  backend-weight-watcher.service  keepalived.conf
examples/: ec2-launcher-fail.rs  ecs_upload.rs  limiter.rs  s3_upload.rs  test_serde.rs
grafana/: README.md  task-definition.json
grafana/scripts/: make-command.sh  start_task.sh
images/backend/: _etc_conf.d_aeroftp  _etc_conf.d_aeroftp-routing  _etc_conf.d_slotmanager  _etc_dhcpcd.conf  _etc_init.d_aeroftp  _etc_init.d_aeroftp-routing  _etc_init.d_slotmanager  _etc_logrotate.d_aeroftp  _etc_network_interfaces  _etc_nftables_aeroftp.nft  _etc_sysctl.d_50-aeroftp.conf  _etc_udhcpc_udhcpc.conf  _home_aeroftp_credentials.json  _opt_aws_amazon-cloudwatch-agent_etc_amazon-cloudwatch-agent.json  backend.pkr.hcl
images/loadbalancer/: _etc_conf.d_keepalived  _etc_conf.d_keepalived.conf  _etc_init.d_keepalived  _etc_keepalived_keepalived.conf  _etc_nftables_aeroscaler.nft  (+10 more)
openrc/: slotmanager.confd
scripts/: cwagent.json  get-imds-token.sh  launch-instance.sh  prometheus.yaml  putfile.sh  run.sh  shell.sh  start_task.sh  stats.sh  track_mem.sh
src/: config.rs  copilot.rs  http.rs  main.rs  weight_sync.rs
(+57 files in other folders)
