[package]
name = "aeroscaler"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "aeroscaler"
path = "src/main.rs"

[[bin]]
name = "aws-config"
path = "src/bin/aws-config.rs"

[[bin]]
name = "manage-eni"
path = "src/bin/manage-eni.rs"

[[bin]]
name = "slot-pool-lua"
path = "src/bin/slot-pool-lua.rs"

[[bin]]
name = "slot-pool-native"
path = "src/bin/slot-pool-native.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13", features = ["json"] }
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
native-tls = "0.2"
redis = { version = "1.2", features = ["tls-rustls", "tokio-rustls-comp"] }
serde_json = "1"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
thiserror = "2"
anyhow = "1"
