[workspace]
resolver = "2"
members = [
    "aerocore",
    "aerogym",
    "aeroplug",
    "aeropulse",
    "aeroscale",
    "aeroslot",
]
# Crates that are NOT workspace members — either untouched (libunftp stack)
# or not yet converted.  aeroscrape will be absorbed into aeroscale in W7.
exclude = [
    "aeroftp",
    "aeroscrape",
    "aerostress.new",
    "libunftp",
    "unftp-sbe-opendal",
]

# ── Pinned shared dependency versions ─────────────────────────────────────────
# Individual crate Cargo.toml files opt in with `dep = { workspace = true }`.

[workspace.dependencies]
anyhow             = "1"
tokio              = { version = "1", features = ["full"] }
clap               = { version = "4", features = ["derive", "env"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
serde_urlencoded   = "0.7"
redis              = { version = "1.2", features = ["tls-rustls", "tokio-rustls-comp", "tls-rustls-insecure"] }
reqwest            = { version = "0.13", features = ["json"] }
chrono             = "0.4"
sha2               = "0.11"
hmac               = "0.13"
hex                = "0.4"
thiserror          = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream        = "0.1"
prometheus-parse    = "0.2"
axum                = "0.7"

# ── Release profile ───────────────────────────────────────────────────────────
# Applies to all workspace members.

[profile.release]
opt-level      = 3
lto            = "fat"
codegen-units  = 1
panic          = "abort"
strip          = true
