[workspace]
resolver = "2"
members = [
    "aerocore",
    "aeroftp",
    "aerogym",
    "aeroplug",
    "aeropulse",
    "aeroscale",
    "aeroslot",
]
# Crates that are NOT workspace members — untouched git submodules that
# aeroftp depends on via path.
exclude = [
    "libunftp",
    "unftp-sbe-opendal",
]

# ── Pinned shared dependency versions ─────────────────────────────────────────
# Individual crate Cargo.toml files opt in with `dep = { workspace = true }`.

[workspace.dependencies]
anyhow             = "1"
tokio              = { version = "1", features = ["full"] }
clap               = { version = "4", features = ["derive", "env"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
serde_urlencoded   = "0.7"
redis              = { version = "1.2", features = ["tls-rustls", "tokio-rustls-comp", "tls-rustls-insecure"] }
reqwest            = { version = "0.13", features = ["json"] }
chrono             = "0.4"
sha2               = "0.11"
hmac               = "0.13"
hex                = "0.4"
thiserror          = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream        = "0.1"
prometheus-parse    = "0.2"
axum                = "0.7"

# ── Release profile ───────────────────────────────────────────────────────────
# Default: optimise all daemon/CLI crates for speed.

[profile.release]
opt-level      = 3
lto            = "fat"
codegen-units  = 1
panic          = "abort"
strip          = true

# aeroftp is a long-running server binary where image/deploy size matters
# more than raw CPU throughput.  Override back to the size-optimised
# settings it used before joining the workspace.
[profile.release.package.aeroftp]
# Optimise for binary size rather than speed (lto/panic/strip are
# inherited from the workspace [profile.release] above).
opt-level = "s"
