[package]
name        = "aerocoach"
version     = "0.1.0"
edition     = "2024"
description = "Controller and aggregator for aerosuite load tests."

[dependencies]
# ── Workspace ─────────────────────────────────────────────────────────────────
anyhow             = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
axum               = { workspace = true, features = ["ws"] }
chrono             = { workspace = true }
thiserror          = { workspace = true }
tokio-stream       = { workspace = true, features = ["sync"] }

# ── Local ──────────────────────────────────────────────────────────────────────
aeroproto    = { path = "../aeroproto" }
tonic        = "0.12"
prost        = "0.13"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
correctness = "deny"
suspicious  = "warn"
style       = "warn"
complexity  = "warn"
perf        = "warn"

[dev-dependencies]
# test-util enables tokio::time::pause() / advance() for deterministic clock tests
tokio    = { workspace = true, features = ["test-util"] }
tempfile = "3"
