[package]
name        = "aerocore"
version     = "0.1.0"
edition     = "2021"
publish     = false

[dependencies]
anyhow           = { workspace = true }
tokio            = { workspace = true }
reqwest          = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
serde_urlencoded = { workspace = true }
chrono           = { workspace = true }
sha2             = { workspace = true }
hmac             = { workspace = true }
hex              = { workspace = true }
redis            = { workspace = true }
tracing          = { workspace = true }
