[package]
name = "aeroftp"
publish = false
edition = "2021"

[dependencies]
libunftp = { path = "../libunftp", features = ["aws_lc_rs", "prometheus", "proxy_protocol"] }
#libunftp = { version = "0.21.1", features = ["aws_lc_rs", "prometheus", "proxy_protocol"] }
tokio = { version = "1.48.0", features = ["signal", "macros", "rt-multi-thread", "tracing"] }
opendal = { version = "0.55.0", default-features = false, features = ["services-azdls", "services-s3", "executors-tokio"] }
anyhow = { version = "1.0.100" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unftp-sbe-opendal = { path = "../unftp-sbe-opendal" }
unftp-auth-jsonfile = { path = "../libunftp/crates/unftp-auth-jsonfile" }
reqwest = { version = "0.12.28", default-features = false, features = ["charset", "http2", "default-tls", "json"]}
reqsign = { version = "0.16.5", features = ["services-aws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.43"
async-trait = "0.1.88"
# redis = { version = "1.0.2", default-features = false, features = ["tls-rustls", "acl", "geospatial", "num-bigint", "script", "streams"] }
# rustls = { version = "0.23.36", default-features = false, features = [ "aws-lc-rs" ] }
# redis = { version = "1.0.2", default-features = false, features = ["acl", "geospatial", "num-bigint", "script", "streams", "tls-rustls", "connection-manager", "aio", "tokio-rustls-comp", "tokio-comp"] }
# rustls = { version = "0.23.36", default-features = false, features = ["aws-lc-rs", "logging", "prefer-post-quantum", "std", "tls12", "aws_lc_rs"] }

console-subscriber = { version = "0.5.0", optional = true }
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.19", features = ["full"] }
prometheus = { version = "0.14.0", features = ["process"] }
# tokio = { version = "1.48.0", features = ["full", "tracing"] }
# rustls = "0.23.35"

[features]
tokio_console = ["console-subscriber"]

[dev-dependencies]
aws-config = { version = "1.8.12", features = ["credentials-process", "rt-tokio", "behavior-version-latest"] }
aws-types = "1.3.11"
aws-credential-types = "1.2.11"
# aws-smithy-types = "1.4.3"
# aws-runtime = "1.6.0"
# aws-smithy-runtime-api = { version = "1.11.3", features = ["client"] }

[lints.rust]
missing_docs = "warn"

