[package]
name        = "aeroplug"
version     = "0.1.0"
edition     = "2021"
publish     = false

[[bin]]
name = "aeroplug"
path = "src/main.rs"

[dependencies]
aerocore         = { path = "../aerocore" }
anyhow           = { workspace = true }
clap             = { workspace = true }
tokio            = { workspace = true }
