[package]
name        = "aeroscale"
version     = "0.1.0"
edition     = "2021"
publish     = false
autobins    = false

# ── Binaries ──────────────────────────────────────────────────────────────────

[[bin]]
name = "aeroscale"
path = "src/bin/aeroscale.rs"

[[bin]]
name = "scale"
path = "src/bin/scale.rs"

[[bin]]
name = "aws-config"
path = "src/bin/aws-config.rs"

[dependencies]
aerocore             = { path = "../aerocore" }
anyhow               = { workspace = true }
clap                 = { workspace = true }
redis                = { workspace = true }
reqwest              = { workspace = true }
serde_json           = { workspace = true }
tokio                = { workspace = true }
serde                = { workspace = true }
chrono               = { workspace = true }
thiserror            = { workspace = true }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }
tokio-stream         = { workspace = true }
prometheus-parse     = { workspace = true }
axum                 = { workspace = true }
